--- a/src/main/res/values/color.xml
+++ b/src/main/res/values/color.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- http://www.google.com/design/spec/style/color.html#color-color-palette -->
-    <color name="primary">#607d8b</color>
+    <color name="primary">#3c8dbc</color>
     <!-- Blue Grey 500 -->
     <color name="primary_dark">#455a64</color>
     <!-- Blue Grey 700 -->
-    <color name="accent">#ff5252</color>
+    <color name="accent">#3c8dbc</color>
     <!-- Red A200 -->
 </resources>
