adds new splash screen on initialization, adds new app icon. prep for some more changes. stopped background services, and left the app running in the background unless they kill it entirely

--- a/src/main/res/values/color.xml
+++ b/src/main/res/values/color.xml
@@ -7,4 +7,5 @@
     <!-- Blue Grey 700 -->
     <color name="accent">#3c8dbc</color>
     <!-- Red A200 -->
+    <color name="white">#ffffff</color>
 </resources>
