--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -17,4 +17,10 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="SplashTheme" parent="android:Theme.Light.NoTitleBar">
+        <item name="android:windowBackground">
+            @drawable/msm_splash_app
+        </item>
+    </style>
+
 </resources>
