--- a/src/main/res/xml/preferences.xml
+++ b/src/main/res/xml/preferences.xml
@@ -14,16 +14,16 @@
             android:summary="@string/pref_bluetooth_list_devices_summary"
             android:title="@string/pref_bluetooth_list_devices_title" />
     </PreferenceCategory>
-    <PreferenceCategory
-        android:key="@string/pref_gps_category"
-        android:title="@string/title_pref_gps">
-        <CheckBoxPreference
-            android:defaultValue="true"
-            android:dialogTitle="@string/pref_gps_category_title"
-            android:key="enable_gps_preference"
-            android:summaryOff="@string/pref_gps_category_summaryOff"
-            android:summaryOn="@string/pref_gps_category_summaryOn"
-            android:title="@string/pref_gps_category_title" />
+    <!--<PreferenceCategory-->
+        <!--android:key="@string/pref_gps_category"-->
+        <!--android:title="@string/title_pref_gps">-->
+        <!--<CheckBoxPreference-->
+            <!--android:defaultValue="true"-->
+            <!--android:dialogTitle="@string/pref_gps_category_title"-->
+            <!--android:key="enable_gps_preference"-->
+            <!--android:summaryOff="@string/pref_gps_category_summaryOff"-->
+            <!--android:summaryOn="@string/pref_gps_category_summaryOn"-->
+            <!--android:title="@string/pref_gps_category_title" />-->
         <!--<EditTextPreference-->
             <!--android:defaultValue="1"-->
             <!--android:dialogTitle="@string/pref_gps_update_period_title"-->
@@ -36,14 +36,14 @@
             <!--android:key="gps_distance_period_preference"-->
             <!--android:summary="@string/pref_gps_distance_period_summary"-->
             <!--android:title="@string/pref_gps_distance_period_title" />-->
-    </PreferenceCategory>
-    <PreferenceCategory android:title="@string/title_pref_obd">
-        <ListPreference
-            android:defaultValue="AUTO"
-            android:dialogTitle="@string/pref_obd_protocols_title"
-            android:key="obd_protocols_preference"
-            android:summary="@string/pref_obd_protocols_summary"
-            android:title="@string/pref_obd_protocols_title" />
+    <!--</PreferenceCategory>-->
+    <!--<PreferenceCategory android:title="@string/title_pref_obd">-->
+        <!--<ListPreference-->
+            <!--android:defaultValue="AUTO"-->
+            <!--android:dialogTitle="@string/pref_obd_protocols_title"-->
+            <!--android:key="obd_protocols_preference"-->
+            <!--android:summary="@string/pref_obd_protocols_summary"-->
+            <!--android:title="@string/pref_obd_protocols_title" />-->
         <!--<CheckBoxPreference-->
             <!--android:defaultValue="true"-->
             <!--android:dialogTitle="@string/pref_imperial_units_title"-->
@@ -51,30 +51,30 @@
             <!--android:summaryOff="@string/pref_imperial_units_summaryOff"-->
             <!--android:summaryOn="@string/pref_imperial_units_summaryOn"-->
             <!--android:title="@string/pref_imperial_units_title" />-->
-        <EditTextPreference
-            android:defaultValue="4"
-            android:dialogTitle="@string/pref_obd_update_period_title"
-            android:key="obd_update_period_preference"
-            android:summary="@string/pref_obd_update_period_summary"
-            android:title="@string/pref_obd_update_period_title" />
-        <EditTextPreference
-            android:defaultValue="70"
-            android:dialogTitle="@string/pref_max_fuel_econ_title"
-            android:key="max_fuel_econ_preference"
-            android:summary="@string/pref_max_fuel_econ_summary"
-            android:title="@string/pref_max_fuel_econ_title" />
-        <EditTextPreference
-            android:defaultValue=".85"
-            android:dialogTitle="@string/pref_volumetric_efficiency_dialog_title"
-            android:key="volumetric_efficiency_preference"
-            android:summary="@string/pref_volumetric_efficiency_summary"
-            android:title="@string/pref_volumetric_efficiency_title" />
-        <EditTextPreference
-            android:defaultValue="1.6"
-            android:dialogTitle="@string/pref_engine_displacement_title"
-            android:key="engine_displacement_preference"
-            android:summary="@string/pref_engine_displacement_summary"
-            android:title="@string/pref_engine_displacement_title" />
+        <!--<EditTextPreference-->
+            <!--android:defaultValue="4"-->
+            <!--android:dialogTitle="@string/pref_obd_update_period_title"-->
+            <!--android:key="obd_update_period_preference"-->
+            <!--android:summary="@string/pref_obd_update_period_summary"-->
+            <!--android:title="@string/pref_obd_update_period_title" />-->
+        <!--<EditTextPreference-->
+            <!--android:defaultValue="70"-->
+            <!--android:dialogTitle="@string/pref_max_fuel_econ_title"-->
+            <!--android:key="max_fuel_econ_preference"-->
+            <!--android:summary="@string/pref_max_fuel_econ_summary"-->
+            <!--android:title="@string/pref_max_fuel_econ_title" />-->
+        <!--<EditTextPreference-->
+            <!--android:defaultValue=".85"-->
+            <!--android:dialogTitle="@string/pref_volumetric_efficiency_dialog_title"-->
+            <!--android:key="volumetric_efficiency_preference"-->
+            <!--android:summary="@string/pref_volumetric_efficiency_summary"-->
+            <!--android:title="@string/pref_volumetric_efficiency_title" />-->
+        <!--<EditTextPreference-->
+            <!--android:defaultValue="1.6"-->
+            <!--android:dialogTitle="@string/pref_engine_displacement_title"-->
+            <!--android:key="engine_displacement_preference"-->
+            <!--android:summary="@string/pref_engine_displacement_summary"-->
+            <!--android:title="@string/pref_engine_displacement_title" />-->
         <!--<EditTextPreference-->
             <!--android:defaultValue="atsp0\natz"-->
             <!--android:dialogTitle="@string/pref_reader_config_title"-->
@@ -87,47 +87,47 @@
             <!--android:key="dev_email"-->
             <!--android:summary="@string/pref_dev_email_summary"-->
             <!--android:title="@string/pref_dev_email_title"/>-->
-    </PreferenceCategory>
+    <!--</PreferenceCategory>-->
     <PreferenceCategory android:title="@string/title_pref_commands">
         <PreferenceScreen
             android:key="obd_commands_screen"
             android:summary="@string/title_pref_commands_summary"
             android:title="@string/title_pref_commands_title"/>
     </PreferenceCategory>
-    <PreferenceCategory android:title="@string/title_pref_full_logging">
-        <CheckBoxPreference
-            android:defaultValue="false"
-            android:key="enable_full_logging"
-            android:summary="@string/pref_enable_full_logging_summary"
-            android:title="@string/pref_enable_full_logging_title"/>
+    <!--<PreferenceCategory android:title="@string/title_pref_full_logging">-->
+        <!--<CheckBoxPreference-->
+            <!--android:defaultValue="false"-->
+            <!--android:key="enable_full_logging"-->
+            <!--android:summary="@string/pref_enable_full_logging_summary"-->
+            <!--android:title="@string/pref_enable_full_logging_title"/>-->
         <!--<EditTextPreference-->
             <!--android:defaultValue="@string/default_dirname_full_logging"-->
             <!--android:dialogTitle="@string/pref_dirname_dialogTitle"-->
             <!--android:key="dirname_full_logging"-->
             <!--android:summary="@string/pref_dirname_summary"-->
             <!--android:title="@string/pref_dirname_title" />-->
-    </PreferenceCategory>
-    <PreferenceCategory
-        android:key="@string/pref_upload_category"
-        android:title="@string/pref_vehicle_info_title">
+    <!--</PreferenceCategory>-->
+    <!--<PreferenceCategory-->
+        <!--android:key="@string/pref_upload_category"-->
+        <!--android:title="@string/pref_vehicle_info_title">-->
         <!--<CheckBoxPreference-->
-        <!--android:defaultValue="true"-->
-        <!--android:dialogTitle="@string/pref_upload_title"-->
-        <!--android:key="upload_data_preference"-->
-        <!--android:summaryOff="@string/pref_upload_summaryOff"-->
-        <!--android:summaryOn="@string/pref_upload_summaryOn"-->
-        <!--android:title="@string/pref_upload_title" />-->
+            <!--android:defaultValue="true"-->
+            <!--android:dialogTitle="@string/pref_upload_title"-->
+            <!--android:key="upload_data_preference"-->
+            <!--android:summaryOff="@string/pref_upload_summaryOff"-->
+            <!--android:summaryOn="@string/pref_upload_summaryOn"-->
+            <!--android:title="@string/pref_upload_title" />-->
         <!--<EditTextPreference-->
-        <!--android:defaultValue="@string/pref_default_upload_url"-->
-        <!--android:dialogTitle="@string/pref_upload_url_title"-->
-        <!--android:key="upload_url_preference"-->
-        <!--android:summary="@string/pref_upload_url_summary"-->
-        <!--android:title="@string/pref_upload_url_title" />-->
-        <EditTextPreference
-            android:defaultValue=" "
-            android:dialogTitle="@string/pref_vehicle_id_title"
-            android:key="vehicle_id_preference"
-            android:summary="@string/pref_vehicle_id_summary"
-            android:title="@string/pref_vehicle_id_title" />
-    </PreferenceCategory>
+            <!--android:defaultValue="@string/pref_default_upload_url"-->
+            <!--android:dialogTitle="@string/pref_upload_url_title"-->
+            <!--android:key="upload_url_preference"-->
+            <!--android:summary="@string/pref_upload_url_summary"-->
+            <!--android:title="@string/pref_upload_url_title" />-->
+        <!--<EditTextPreference-->
+            <!--android:defaultValue=" "-->
+            <!--android:dialogTitle="@string/pref_vehicle_id_title"-->
+            <!--android:key="vehicle_id_preference"-->
+            <!--android:summary="@string/pref_vehicle_id_summary"-->
+            <!--android:title="@string/pref_vehicle_id_title" />-->
+    <!--</PreferenceCategory>-->
 </PreferenceScreen>
