--- a/src/main/res/layout/main.xml
+++ b/src/main/res/layout/main.xml
@@ -111,6 +111,76 @@
             android:textSize="@dimen/abc_text_size_display_2_material" />
     </TableRow>
 
+
+
+    <LinearLayout
+        android:id="@+id/data_layout_main"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="top"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        android:elevation="2dp"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="hello world"
+            android:id="@+id/dlm_tv1"/>
+
+    </LinearLayout>
+    <ScrollView
+        android:id="@+id/data_scroll"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="top"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        android:elevation="2dp"
+        android:outlineProvider="bounds"
+        >
+        <TableLayout
+            android:id="@+id/data_table"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:stretchColumns="*" />
+
+    </ScrollView>
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/text_consumption_label"
+            android:textSize="@dimen/abc_text_size_small_material"
+            android:textColor="@color/primary"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/text_runtime_label"
+            android:textSize="@dimen/abc_text_size_small_material"
+            android:textColor="@color/primary"
+            android:textStyle="bold"  />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/text_rpm_label"
+            android:textSize="@dimen/abc_text_size_small_material"
+            android:textColor="@color/primary"
+            android:textStyle="bold" />
+
+
     </TableRow>
 
     <TableRow
@@ -139,25 +209,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:tag="ENGINE_RPM"
-            android:text="" />
+            android:text="0" />
     </TableRow>
-
-    <ScrollView
-        android:id="@+id/data_scroll"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_gravity="top"
-        android:layout_margin="10dp"
-        android:layout_weight="1"
-        android:elevation="2dp"
-        android:outlineProvider="bounds">
-
-        <TableLayout
-            android:id="@+id/data_table"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:stretchColumns="*"></TableLayout>
-    </ScrollView>
 
     <TableRow
         android:layout_width="fill_parent"
@@ -224,5 +277,25 @@
             android:gravity="center"
             android:text="" />
     </TableRow>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/view_detailed_logging"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_weight="0.01"
+            android:onClick="viewLoggingDetails"
+            android:textColor="@color/white"
+            android:background="@color/primary"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="10dp"
+            />
+
+    </LinearLayout>
 </LinearLayout>
