--- a/src/main/res/layout/main.xml
+++ b/src/main/res/layout/main.xml
@@ -87,34 +87,37 @@
             />
     </LinearLayout>
 
-    <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:layout_marginLeft="5dp"
-            android:tag="SPEED"
-            android:text="@string/text_zero"
-            android:textSize="@dimen/abc_text_size_display_2_material" />
-
-        <TextView
-            android:id="@+id/compass_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:text="@string/text_orientation_default"
-            android:layout_marginRight="5dp"
-            android:textSize="@dimen/abc_text_size_display_2_material" />
-    </TableRow>
-
-
-
     <LinearLayout
-        android:id="@+id/data_layout_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:layout_marginLeft="5dp"
+                android:tag="SPEED"
+                android:text="@string/text_zero"
+                android:textSize="@dimen/abc_text_size_display_2_material" />
+
+            <TextView
+                android:id="@+id/compass_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="@string/text_orientation_default"
+                android:layout_marginRight="5dp"
+                android:textSize="@dimen/abc_text_size_display_2_material" />
+        </TableRow>
+    </LinearLayout>
+
+
+    <ScrollView
+        android:id="@+id/data_main"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_gravity="top"
@@ -122,13 +125,98 @@
         android:layout_weight="1"
         android:elevation="2dp"
         >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="hello world"
-            android:id="@+id/dlm_tv1"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TableRow
+                    android:id="@+id/details_row_1"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginTop="10dp"
+                    >
+                    <TextView
+                        android:id="@+id/details_row_1_L"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/details_row_1_L"
+                        android:textSize="@dimen/abc_text_size_small_material"
+                        android:textColor="@color/primary"
+                        android:textStyle="bold" />
 
-    </LinearLayout>
+                    <TextView
+                        android:id="@+id/details_row_1_C"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/details_row_1_C"
+                        android:textSize="@dimen/abc_text_size_small_material"
+                        android:textColor="@color/primary"
+                        android:textStyle="bold"  />
+
+                    <TextView
+                        android:id="@+id/details_row_1_R"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/details_row_1_R"
+                        android:textSize="@dimen/abc_text_size_small_material"
+                        android:textColor="@color/primary"
+                        android:textStyle="bold" />
+                </TableRow>
+                <TableRow
+                    android:id="@+id/details_row_2"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    >
+                    <TextView
+                        android:id="@+id/details_row_2_L"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text=""
+                        android:textSize="@dimen/abc_text_size_small_material"
+                        android:textColor="@color/primary"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/details_row_2_C"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text=""
+                        android:textSize="@dimen/abc_text_size_small_material"
+                        android:textColor="@color/primary"
+                        android:textStyle="bold"  />
+
+                    <TextView
+                        android:id="@+id/details_row_2_R"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text=""
+                        android:textSize="@dimen/abc_text_size_small_material"
+                        android:textColor="@color/primary"
+                        android:textStyle="bold" />
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
+
+
+    </ScrollView>
+
+
     <ScrollView
         android:id="@+id/data_scroll"
         android:layout_width="fill_parent"
